--- a/src/app/pages/public/settings/profile/profile.page.html
+++ b/src/app/pages/public/settings/profile/profile.page.html
@@ -6,35 +6,32 @@
                 (click)="settings()">
               &nbsp;
               <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet" style="margin-top: 35px;background: gainsboro;text-align: center;">Profile</p>
+            <p class="otherSet_Pro">Profile</p>
          <div style="text-align:center;">
-                <table style="width:100%;padding-left:25px;padding-right:25px;">
+                <table class="tb1">
                         <tr>
                           <td style="width:35%"><span><img src="assets/photo.png" /></span> </td>
                           <td><span class="point18">Joel Strader</span></td>
                         </tr>
                         <tr>
-                            <td colspan="2"> <hr class="hr" style="border-color: #ced4da;margin-left: 0px;margin-right: 0px;"></td>
+                            <td colspan="2"> <hr class="hr1"></td>
                         </tr>  
                       </table>
-                      <table style="width:100%;padding-left:25px;padding-right:25px;padding-top: 10px;">  
+                      <table class="tb2">  
                         <tr class="trspace">
                           <td  style="width:30%"><span><img src="assets/telephone.png" /></span> </td>
                           <td><span class="point18 ">+1 309 310 3693</span></td>
                         </tr>
-                      
                         <tr class="trspace">
                           <td  style="width:30%"><span><img src="assets/mail.png" /></span> </td>
                           <td><span class="point18">joel.enviamejor@gmail.com</span></td>
                         </tr>
-                       
                         <tr class="trspace">
                           <td  style="width:30%"><span><img src="assets/address.png" /></span> </td>
                           <td><span class="point18" style="display:block">2535 Springdale</span>
                             <span class="point18" style="display:block">Arkansas,71360,US</span>
                         </td>
                         </tr>
-                        
                       </table>
          </div>
             
