--- a/src/app/pages/public/settings/settings.page.html
+++ b/src/app/pages/public/settings/settings.page.html
@@ -6,7 +6,7 @@
           (click)="home()">
         &nbsp;
         <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-      <p class="otherSet" style="margin-top: 35px;background: gainsboro;text-align: center;">Settings</p>
+      <p class="otherSet_Pro">Settings</p>
     <table style="width:100%;padding-left:25px;padding-right:25px;">
       <tr>
         <td style="width:20%"><span><img src="assets/info.png" /></span> </td>
@@ -14,7 +14,7 @@
         <td><span><img src="assets/arrow.png" style="cursor:pointer"/></span></td>
       </tr>
       <tr>
-          <td colspan="3"> <hr class="hr" style="border-color: #ced4da;margin-left: 0px;margin-right: 0px;"></td>
+          <td colspan="3"> <hr class="hr1" ></td>
       </tr>     
       <tr>
         <td  style="width:20%"><span><img src="assets/user.png" /></span> </td>
@@ -22,7 +22,7 @@
         <td><span><img src="assets/arrow.png" style="cursor:pointer" (click)="profile()" /></span></td>
       </tr>
       <tr>
-          <td colspan="3"> <hr class="hr" style="border-color: #ced4da;margin-left: 0px;margin-right: 0px;"></td>
+          <td colspan="3"> <hr class="hr1" ></td>
         </tr>
       <tr>
         <td  style="width:20%"><span><img src="assets/key.png" /></span> </td>
@@ -30,7 +30,7 @@
         <td><span><img src="assets/arrow.png" style="cursor:pointer" /></span></td>
       </tr>
       <tr>
-          <td colspan="3"> <hr class="hr" style="border-color: #ced4da;margin-left: 0px;margin-right: 0px;"></td>
+          <td colspan="3"> <hr class="hr1" ></td>
         </tr>
       <tr>
         <td  style="width:20%"><span><img src="assets/policy.png" /></span> </td>
@@ -38,7 +38,7 @@
         <td><span><img src="assets/arrow.png" style="cursor:pointer" /></span></td>
       </tr>
       <tr>
-          <td colspan="3"> <hr class="hr" style="border-color: #ced4da;margin-left: 0px;margin-right: 0px;"></td>
+          <td colspan="3"> <hr class="hr1" ></td>
         </tr>
       <tr>
         <td  style="width:20%"><span><img src="assets/accept.png" /></span> </td>
@@ -46,7 +46,7 @@
         <td><span><img src="assets/arrow.png" style="cursor:pointer" /></span></td>
       </tr>
       <tr>
-          <td colspan="3"> <hr class="hr" style="border-color: #ced4da;margin-left: 0px;margin-right: 0px;"></td>
+          <td colspan="3"> <hr class="hr1" ></td>
         </tr>
       <tr>
         <td  style="width:20%"><span><img src="assets/help.png" /></span> </td>
@@ -54,7 +54,7 @@
         <td><span><img src="assets/arrow.png" style="cursor:pointer" /></span></td>
       </tr>
       <tr>
-          <td colspan="3"> <hr class="hr" style="border-color: #ced4da;margin-left: 0px;margin-right: 0px;"></td>
+          <td colspan="3"> <hr class="hr1" ></td>
         </tr>
       <tr>
         <td  style="width:20%"><span><img src="assets/versions.png" /></span> </td>
