--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -26,13 +26,8 @@
                 <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
             
             <p style="float: right;">
-                <button id="7day" style="cursor: pointer;width: 75px;height: 22px;color: rgba(60, 60, 60, 1);font-size: 16px
-                    ;border-radius: 55px;background-color: #ffc33f;margin-right: -34px;position: relative;border: 1px solid #ffc33f;cursor: pointer;"
-                    (click)="click7days()">7 Days</button>&nbsp;
-                <button id="30day" style="width: 96px;height: 22px;color: rgba(60, 60, 60, 1);font-size: 16px
-                    ;border-radius: 55px;background-color: #fff;text-align: end;border: 1px solid #ffc33f;cursor: pointer;"
-                    (click)="click30days()">30 Days</button>
-
+                <button id="7day" class="day7" (click)="click7days()">7 Days</button>&nbsp;
+                <button id="30day" class="day30" (click)="click30days()">30 Days</button>
             </p>
             <br>
             <p class="otherSet" style="margin-top: 35px;background: gainsboro;">17th Dec 2019</p>
@@ -44,7 +39,7 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 564645646</span>
+                    <span class="span2">Reference Code: 564645646</span>
                 </div>
                 <div style="width:8%">
                     <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
@@ -66,7 +61,7 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 564645646</span>
+                    <span class="span2">Reference Code: 564645646</span>
                 </div>
                 <div style="width:8%">
                     <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
@@ -88,7 +83,7 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 564645646</span>
+                    <span class="span2">Reference Code: 564645646</span>
                 </div>
                 <div style="width:8%">
                     <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
@@ -110,7 +105,7 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 564645646</span>
+                    <span class="span2">Reference Code: 564645646</span>
                 </div>
                 <div style="width:8%">
                     <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
@@ -132,7 +127,7 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 564645646</span>
+                    <span class="span2">Reference Code: 564645646</span>
                 </div>
                 <div style="width:8%">
                     <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
@@ -154,7 +149,7 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 564645646</span>
+                    <span class="span2">Reference Code: 564645646</span>
                 </div>
                 <div style="width:8%">
                     <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
