--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -3,50 +3,54 @@
         <div class="columnHome"></div>
         <div class="columnHome">
             <div id="mySidenav" class="sidenav" style="position: absolute;">
-                <span><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18" height="18" align="top" (click)="home()"><label
-                        class="margin20" (click)="home()">Home</label></span>
+                <span><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
+                        (click)="home()"><label class="margin20" (click)="home()">Home</label></span>
                 <hr class="hr">
-                <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"  (click)="sendMoney()"><label
-                        class="margin20" (click)="sendMoney()">Send Money</label></span>
+                <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
+                        (click)="sendMoney()"><label class="margin20" (click)="sendMoney()">Send Money</label></span>
                 <hr class="hr">
-                <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="18" height="18" align="top" (click)="transaction()"><label
-                        class="margin20" (click)="transaction()">Transactions</label></span>
+                <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
+                        (click)="transaction()"><label class="margin20" (click)="transaction()">Transactions</label></span>
                 <hr class="hr">
-                <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="18" height="18" align="top" (click)="wallet()"><label
-                        class="margin20" (click)="wallet()">Manage Wallet</label></span>
+                <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
+                        (click)="wallet()"><label class="margin20" (click)="wallet()">Manage Wallet</label></span>
                 <hr class="hr">
                 <span><img src="assets/settings.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"><label
                         class="margin20" (click)="settings()">Settings</label></span>
                 <hr class="hr">
-                <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18"  (click)="settings()" align="top" (click)="logOut()"><label
-                        class="margin20" (click)="logOut()">Logout</label></span>
+                <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18" (click)="settings()"
+                        align="top" (click)="logOut()"><label class="margin20" (click)="logOut()">Logout</label></span>
             </div>
-            <p><img src="assets/icon_ionic_md_menu.png" alt=""  align="top" (click)="openNav()"
-                    style="cursor: pointer;padding-top: 5px;"> &nbsp;
-                <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
+            <p><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 5px;">
+                &nbsp;
+                <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
+            <p style="float: right;padding-left: 10px;">
+                <span><img src="assets/Icon open-list.png" alt="" align="top" style="margin-right: 10px;cursor: pointer;"
+                        (click)="listViewFunc()"></span>
+            </p>
             <p style="float: right;cursor: pointer;">
                 <span><img src="assets/icon_ionic_md_grid.png" alt="" align="top" (click)="gridViewFunc()"> &nbsp;</span>
-                <span><img src="assets/Icon open-list.png"  alt=""  align="top" style="margin-right: 10px;cursor: pointer;"(click)="listViewFunc()"></span>
             </p>
+
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
-            <div class="wrapper"  id="column" *ngIf="gridView" style="opacity:1"> 
+            <div class="wrapper" id="column" *ngIf="gridView" style="opacity:1">
                 <div style="margin: auto;text-align: -webkit-right;">
-                    <img class="test" src="assets/Polygon 12.png" style="cursor:pointer" (click)="sendMoney()"/>
+                    <img class="test" src="assets/Polygon 12.png" style="cursor:pointer" (click)="sendMoney()" />
                     <label class="lal">One</label>
                     <br><br>
-                    <span class="centerText"  style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
+                    <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
                 </div>
                 <div style="margin: auto;text-align: -webkit-right;">
-                    <img class="test" src="assets/Group 1.png"  style="cursor:pointer" (click)="sendMoney()" />
+                    <img class="test" src="assets/Group 1.png" style="cursor:pointer" (click)="sendMoney()" />
                     <label class="lal">One</label>
                     <br><br>
-                    <span class="centerText"  style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
+                    <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
                 </div>
                 <div style="margin: auto;text-align: -webkit-right;">
-                    <img class="test" src="assets/Group 3.png"  style="cursor:pointer" (click)="sendMoney()"/>
+                    <img class="test" src="assets/Group 3.png" style="cursor:pointer" (click)="sendMoney()" />
                     <label class="lal">One</label>
                     <br><br>
-                    <span class="centerText"  style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
+                    <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
                 </div>
                 <div style="margin: auto;text-align: -webkit-right;">
                     <img class="test" src="assets/Group 4.png" />
@@ -86,7 +90,7 @@
                     <span class="centerText">New Transfer</span>
                 </div>
             </div>
-            <div class="ListWrapper" id="column" *ngIf="listView" >
+            <div class="ListWrapper" id="column" *ngIf="listView">
                 <div style="margin: auto;">
                     <img class="test" src="assets/Polygon 12.png" />
                     <label class="lalFirst">One</label>
