--- a/src/app/pages/public/managewallet/managewallet.page.html
+++ b/src/app/pages/public/managewallet/managewallet.page.html
@@ -6,7 +6,7 @@
                     (click)="home()">
                 &nbsp;
                 <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet" style="margin-top: 35px;background: gainsboro;text-align: center;">Wallet</p>
+            <p class="otherSet_Pro">Wallet</p>
             <p style="float: left;">
                 <button style="cursor: pointer;color: rgba(60, 60, 60, 1);font-size: 16px
                         ;border-radius: 55px;    opacity: 1;width: 162.00px;
@@ -32,13 +32,13 @@
                     <span class="pt16_2">XXXX XXXX XXXX 7869</span>
                 </div>
                 <div style="margin-left: 10px;width:6%">
-                    <img src="assets/radio_on.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/radio_on.png" id="click1" alt="" align="middle" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
                     <span class="pt16_2"> Primary</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/delete_acc.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/delete_acc.png"  alt="" align="middle" style="margin-right: 10px;">
                 </div>
             </div>
             <br>
@@ -50,7 +50,7 @@
                     <span class="pt16_2">XXXX XXXX XXXX 3217</span>
                 </div>
                 <div style="margin-left: 10px;width:6%">
-                    <img src="assets/radio_off.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/radio_off.png" id="click2"  alt="" align="middle" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
                     <span class="pt16_2"> Not primary</span>
