--- a/src/app/pages/public/managewallet/walletadd/walletadd.page.html
+++ b/src/app/pages/public/managewallet/walletadd/walletadd.page.html
@@ -15,7 +15,7 @@
             <p><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 5px" (click)="wallet()">
                 &nbsp;
                 <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet" style="margin-top: 35px;background: gainsboro;text-align: center;">Wallet</p>
+            <p class="otherSet_Pro">Wallet</p>
             <div class="clear"></div>
             <p class="head1" style="font-family: raleway_medium, Arial !important">Please fill in the required details
             </p>
