--- a/src/app/pages/public/sendmessage/sendmessage.page.html
+++ b/src/app/pages/public/sendmessage/sendmessage.page.html
@@ -5,19 +5,14 @@
             <p><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 2px" (click)="sendmoney()">
                 &nbsp;
                 <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet" style="margin-top: 35px;background: gainsboro;text-align: center;">Send Message</p>
+            <p class="otherSet_Pro" >Send Message</p>
             <p style="float: right;">
-                <button style="cursor: pointer;width: 73px;height: 22px;color: rgba(60, 60, 60, 1);font-size: 16px
-                        ;border-radius: 55px;background-color: #ffc33f;"
-                    (click)="getHistory()">History</button>&nbsp;
-                <button style="margin-right: 10px;width: 135px;height: 22px;color: rgba(60, 60, 60, 1);font-size: 16px
-                        ;border-radius: 55px;background-color: #ffc33f;visibility: hidden;"
-                    (click)="sendMessage()">Send Message</button>
+                <button  class="history" (click)="getHistory()">History</button>&nbsp;
+                <button class="send" (click)="sendMessage()" style="visibility: hidden !important">Send Message</button>
             </p>
             <div class="clear"></div>
             <div><br><br><p></p></div>
-            <div id="viewpg" style="margin-left:10px;margin-right:10px;bottom:10px;
-            border:1px solid lightgray;padding-top: 12px;height: 23pc;">
+            <div id="viewpg" class="sendMesg">
               <table style="width:100%" >
                     <tr class="trspace">
                         <td style="width:10%;padding-left: 10px;">
@@ -34,12 +29,9 @@
                     </tr> 
                     <tr class="trspace">
                             <td colspan="2">
-                                <div style="border: 1px solid lightgray;margin-left: 10px;margin-right:10px;
-                                height: 80px;border-radius: 19px;">
-                                    <p style="font-size: 16.00px;font-weight: 400;color: rgba(60, 60, 60, 1);opacity: 0.9900000095367432;
-                                    font-style: normal;font-family: raleway_regular, Arial;padding-left: 15px;">
+                                <div class="divMsg">
+                                    <p class="msg">
                                   Hi Eric I had transferred $3800 .
-                                        
                             </p>
                                 </div>
                             </td>
@@ -47,10 +39,7 @@
                         <tr class="trspace" style="text-align: right !important">
                                 <td colspan="2">
                                         <div style="margin-left: 10px;margin-right:10px;;border-radius: 19px;">
-                                             <label style="opacity:0.800000011920929;font-size: 12.00px;
-                                             font-weight: 500;
-                                             font-style: normal;
-                                             font-family: raleway_medium, Arial;color: rgba(41, 39, 36, 1);">
+                                             <label class="sent">
                                                  Message sent successfully
                                              </label>
                                         </div>
