--- a/src/app/pages/public/forgotpassword/forgotpassword.page.html
+++ b/src/app/pages/public/forgotpassword/forgotpassword.page.html
@@ -1,5 +1,5 @@
 <style>
-  .digit-group > input {width: 30px;height: 37px;line-height: 50px;text-align: center;background-color: white;font-size: 20px;border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797;}</style>
+  .digit-group > input {text-align: center;background-color: white;font-size: 20px;border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797 !important;}</style>
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
@@ -26,12 +26,12 @@
           <!-- for  Pincode input -->
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
           <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-            <input class="inputs" type="text"  />
-            <input class="inputs" type="text" />
-            <input class="inputs" type="text" />
-            <input class="inputs" type="text" />
-            <input class="inputs" type="text" />
-            <input class="inputs" type="text" />
+            <input class="inputs" type="text"   class="inputs"/>
+            <input class="inputs" type="text"  class="inputs"/>
+            <input class="inputs" type="text"  class="inputs"/>
+            <input class="inputs" type="text"  class="inputs"/>
+            <input class="inputs" type="text" class="inputs" />
+            <input class="inputs" type="text"  class="inputs"/>
             <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
               <span>Invalid OTP !</span>
             </p>
