--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -25,65 +25,65 @@
                 &nbsp;
                 <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
             <p style="float: right;padding-left: 10px;">
-                <span><img src="assets/Icon open-list.png" alt="" align="top" style="margin-right: 10px;cursor: pointer;"
+                <span><img src="assets/black-list.png" id="list" alt="" align="top" style="margin-right: 10px;cursor: pointer;"
                         (click)="listViewFunc()"></span>
             </p>
             <p style="float: right;cursor: pointer;">
-                <span><img src="assets/icon_ionic_md_grid.png" alt="" align="top" (click)="gridViewFunc()"> &nbsp;</span>
+                <span><img src="assets/yellow-grid.png" id="grid" alt="" align="top" (click)="gridViewFunc()"> &nbsp;</span>
             </p>
 
             <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
             <div class="wrapper" id="column" *ngIf="gridView" style="opacity:1">
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Polygon 12.png" style="cursor:pointer" (click)="sendMoney()" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
                 </div>
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 1.png" style="cursor:pointer" (click)="sendMoney()" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
                 </div>
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 3.png" style="cursor:pointer" (click)="sendMoney()" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText" style="cursor:pointer" (click)="sendMoney()">New Transfer</span>
                 </div>
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 4.png" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText">New Transfer</span>
                 </div>
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 5.png" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText">New Transfer</span>
                 </div>
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 6.png" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText">New Transfer</span>
                 </div>
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 7.png" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText">New Transfer</span>
                 </div>
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 8.png" />
                     <label class="lal">One</label>
                     <br><br>
                     <span class="centerText">New Transfer</span>
                 </div>
 
-                <div style="margin: auto;text-align: -webkit-right;">
+                <div style="margin: auto;text-align: right;">
                     <img class="test" src="assets/Group 9.png" />
                     <label class="lal">One</label>
                     <br><br>
