--- a/src/app/pages/public/managewallet/managewallet.page.html
+++ b/src/app/pages/public/managewallet/managewallet.page.html
@@ -8,10 +8,8 @@
                 <span class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
             <p class="otherSet_Pro">Wallet</p>
             <p style="float: left;">
-                <button style="cursor: pointer;color: rgba(60, 60, 60, 1);font-size: 16px
-                        ;border-radius: 55px;    opacity: 1;width: 162.00px;
-    height: 52.00px;background-color: rgba(255, 195, 63, 1);"
-                    (click)="addwallet()"><img src="assets/add.png" alt="" style="padding-left:5px;position: absolute;left: 16px;top: 187px;">&nbsp;<span
+                <button style="cursor: pointer;color: rgba(60, 60, 60, 1);font-size: 16px;border-radius: 55px;    opacity: 1;width: 162.00px;height: 52.00px;background-color: rgba(255, 195, 63, 1);"
+                    (click)="addwallet()"><img src="assets/add.png" alt="" style="padding-left:5px;position: absolute;left: 16px;top: 190px;">&nbsp;<span
                         class="addAcc">Add Account</span></button>&nbsp;
             </p>
             <br>
@@ -20,7 +18,7 @@
                 <div style="width:12%">
                     <img src="assets/bank.png">
                 </div>
-                <div class="div2">
+                <div class="div2" style="width:46%">
                     <span class="addAcc" style="padding-left: 0px !important">Bank Accounts</span>
                 </div>
             </div>
@@ -32,7 +30,7 @@
                     <span class="pt16_2">XXXX XXXX XXXX 7869</span>
                 </div>
                 <div style="margin-left: 10px;width:6%">
-                    <img src="assets/radio_on.png" id="click1" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/radio_on.png" id="click1" (click)="click1()" alt="" align="middle" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
                     <span class="pt16_2"> Primary</span>
@@ -50,7 +48,7 @@
                     <span class="pt16_2">XXXX XXXX XXXX 3217</span>
                 </div>
                 <div style="margin-left: 10px;width:6%">
-                    <img src="assets/radio_off.png" id="click2"  alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/radio_off.png" id="click2"  (click)="click2()" alt="" align="middle" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
                     <span class="pt16_2"> Not primary</span>
@@ -78,13 +76,13 @@
                     <span class="pt16_2">XXXX XXXX XXXX 5612</span>
                 </div>
                 <div style="margin-left: 10px;width:6%">
-                    <img src="assets/radio_off.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/radio_off.png" alt="" align="middle"  id="click3" (click)="click3()" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
                     <span class="pt16_2"> Not primary</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/delete_acc.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/delete_acc.png" alt=""  align="middle" style="margin-right: 10px;">
                 </div>
             </div>
         </div>
