--- a/src/app/pages/public/verify/verify.page.html
+++ b/src/app/pages/public/verify/verify.page.html
@@ -1,5 +1,5 @@
 <style>body {background-color: blue;display: flex;align-items: center;justify-content: center;flex-direction: column;}
-.digit-group > input {width: 30px;height: 37px;line-height: 50px;text-align: center;background-color: white;font-size: 20px;border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797;}
+.digit-group > input {width: 30px;height: 37px;line-height: 50px;text-align: center;background-color: white;font-size: 20px;border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797 !important;}
 .prompt {margin-bottom: 20px;font-size: 20px;color: black;}</style>
 <div class="bg-color">
   <!-- header title -->
