--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,9 @@
 * {
     box-sizing: border-box;
 }
-*lineHeight{
+/* *lineHeight{
     line-height: 1.618;
-}
+} */
 /* {
     margin,spacing,padding : fontSize * 1.618 ;  value in px
  } */
@@ -137,10 +137,10 @@
 }
 @media screen and (max-width: 600px) {
     .column {
-        width: -webkit-fill-available;
+        width: 100%;
     }
     .columnHome {
-        width: -webkit-fill-available;
+        width: 100%;
     }
 }
 @media only screen 
@@ -162,23 +162,23 @@ and (max-device-width : 320px) and (orientation:portrait){
 }
 @media only screen and (device-width: 768px) {
     .column {
-        width: -webkit-fill-available;
+        width: 100%;
     }
     .columnHome {
-        width: -webkit-fill-available;
+        width: 100%;
     }
 }
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
-    .column { width: -webkit-fill-available;}
-    .columnHome {width: -webkit-fill-available;}
+    .column { width: 100%;}
+    .columnHome {width: 100%;}
 }
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and  (orientation:landscape){
-    .column { width: -webkit-fill-available;}
-    .columnHome {width: -webkit-fill-available;}
+    .column { width: 100%;}
+    .columnHome {width: 100%;}
 }
 @media only screen and (min-width: 961px) {
     .columnHome {
-        width: -webkit-fill-available;
+        width: 100%;
     }
 }
 .bg-white{
@@ -200,7 +200,7 @@ and (max-device-width : 320px) and (orientation:portrait){
     font-style: normal;
     font-family: raleway_medium, Arial;
     color: rgba(41, 39, 36, 1);
-    
+
     opacity: 0.800000011920929;
 }
 .setUp{
@@ -536,7 +536,7 @@ input[type="text"], input[type="password"], textarea,button, select {
     font-size: 20.00px;
     font-weight: 400;
     font-style: normal;
-    font-family: raleway_regular,;
+    font-family: raleway_regular,Arial;
     color: rgba(60, 60, 60, 1);
     opacity: 1;
     cursor: pointer;
