--- a/src/app/pages/public/forgotpassword/forgotpassword.page.html
+++ b/src/app/pages/public/forgotpassword/forgotpassword.page.html
@@ -1,5 +1,5 @@
 <style>
-  .digit-group > input {text-align: center;background-color: white;font-size: 20px;border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797 !important;}</style>
+  .digit-group > input {text-indent: 3px;text-align: center;background-color: white;font-size: 20px;border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797 !important;}</style>
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
