--- a/src/app/pages/public/verify/verify.page.html
+++ b/src/app/pages/public/verify/verify.page.html
@@ -1,6 +1,7 @@
 <style>
-.digit-group > input {height: 35px;    width: 35px;text-indent: 3px;text-align: center;background-color: white;font-size: 20px;
-border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797 !important;}</style>
+.digit-group > input {height: 40px;    width: 35px;text-indent: 1px;text-align: center;background-color: white;
+  font-size: 19px;border-radius:8px;font-weight: 200;margin: 0 5px;
+color: #000009;border: 1px solid #979797 !important;}</style>
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
