--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -2,24 +2,24 @@
     <div class="row" style="overflow:auto;height:100%">
         <div class="columnHome"></div>
         <div class="columnHome">
-                <div id="mySidenav" class="sidenav" style="position: absolute;">
-                    <span><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="25" height="25" align="top" (click)="home()"><label
-                        class="margin20" (click)="home()">Home</label></span>
-                <hr class="hr">
-                <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="25" height="25" align="top"  (click)="sendMoney()"><label
-                        class="margin20" (click)="sendMoney()">Send Money</label></span>
-                <hr class="hr">
-                <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="25" height="25" align="top" (click)="transaction()"><label
-                        class="margin20" (click)="transaction()">Transactions</label></span>
-                <hr class="hr">
-                <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="25" height="25" align="top" (click)="wallet()"><label
-                        class="margin20" (click)="wallet()">Manage Wallet</label></span>
-                <hr class="hr">
-                <span><img src="assets/settings.png" style="cursor: pointer;" alt="" width="25" height="25" align="top"><label
-                        class="margin20" (click)="settings()">Settings</label></span>
-                <hr class="hr">
-                <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="25" height="25"  (click)="settings()" align="top" (click)="logOut()"><label
-                        class="margin20" (click)="logOut()">Logout</label></span>
+                <div id="mySidenav" class="sidenav" *ngIf="openNavBar">
+                        <span style="margin-top:10px;"><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18"
+                                height="18" align="top" (click)="home()"><label class="margin20" (click)="home()">Home</label></span>
+                        <hr class="hr">
+                        <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
+                                (click)="sendMoney()"><label class="margin20" (click)="sendMoney()">Send Money</label></span>
+                        <hr class="hr">
+                        <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
+                                (click)="transaction()"><label class="margin20" (click)="transaction()">Transactions</label></span>
+                        <hr class="hr">
+                        <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
+                                (click)="wallet()"><label class="margin20" (click)="wallet()">Manage Wallet</label></span>
+                        <hr class="hr">
+                        <span><img src="assets/settings.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"><label
+                                class="margin20" (click)="settings()">Settings</label></span>
+                        <hr class="hr">
+                        <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18" (click)="settings()"
+                                align="top" (click)="logOut()"><label class="margin20" (click)="logOut()">Logout</label></span>
                     </div>
             <p><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 5px">
                 &nbsp;
