--- a/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
+++ b/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
@@ -40,10 +40,9 @@
                 <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18"  (click)="settings()" align="top" (click)="logOut()"><label
                         class="margin20" (click)="logOut()">Logout</label></span>
                     </div> -->
-            <p><img src="assets/icon_ionic_md_menu.png" alt="" align="top" style="cursor: pointer;padding-top: 5px" (click)="openNav()">
+            <p class="otherSet_Pro_New"><img src="assets/icon_ionic_md_menu.png" alt="" align="top" style="cursor: pointer;padding-top: 5px" (click)="openNav()">
                 &nbsp;
-                <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
-            <p class="otherSet_Pro">Transaction Details</p>
+                Transaction Details</p>
             <p class="head1" style="text-align: center;">Your transaction is successful .</p>
             <div style="text-align: -webkit-center;">
                 <div class="trans_1">
