--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,6 @@
 * {
     box-sizing: border-box;
 }
-/* *lineHeight{
-    line-height: 1.618;
-} */
-/* {
-    margin,spacing,padding : fontSize * 1.618 ;  value in px
- } */
 .padding_5 {
     padding: 5px;
 }
@@ -24,7 +18,6 @@
     width: 33.33%;
     padding: 10px;
 }
-/* .continue{width: 162px;height:52px;} */
 .wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -147,17 +140,19 @@
 and (max-device-width : 320px) and (orientation:portrait){ 
     .lal{
         right: 36%;
-        top: -31%;
+        top: -31% !important;
+    }
+    .otherSet_Pro_New{
+        font-size: 18px !important;
     }
     .test{
-        margin-right: -19px;
+        margin-right: -19px  !important;
     }
     .lalFirst{
-        right: 38%;
+        right: 38% !important;
     }
-
     .centerText{
-        font-size: 15px;
+        font-size: 15px !important;
     }
 }
 @media only screen and (device-width: 768px) {
@@ -211,6 +206,7 @@ and (max-device-width : 320px) and (orientation:portrait){
     color: rgba(41, 39, 36, 1);
     opacity: 0.800000011920929;
     padding: 3px;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
 }
 .welcome{
     font-size: 46.00px;
@@ -219,6 +215,7 @@ and (max-device-width : 320px) and (orientation:portrait){
     font-family: raleway_bold, Arial;
     color: rgba(41, 39, 36, 1);
     opacity: 1;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
 }
 .lets{
     font-size: 36.00px;
@@ -228,6 +225,7 @@ and (max-device-width : 320px) and (orientation:portrait){
     color: rgba(41, 39, 36, 1);
     opacity: 1;
     padding-top: 10px;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
 }
 .notes{
     font-size: 14.00px;
@@ -236,9 +234,45 @@ and (max-device-width : 320px) and (orientation:portrait){
     color: #bdb9ad;
     padding-top: 12px;
 }
+.transmission{
+    border-radius: 15.00px;
+    background-color: rgba(255, 195, 63, 1);
+    margin: 10px;
+    height: 43px;
+    color: rgba(0, 0, 0, 1);
+    opacity: 1;
+    text-align: center;
+}
+.sendmoneyBtn{   
+    position: relative;     
+    height: 36.5px;
+    width: auto;
+    border-radius: 10px;
+    background-color: rgba(60, 60, 60, 1);
+    color: rgba(255, 255, 255, 1);
+    font-size: 24.00px;
+    font-weight: 500;
+    font-style: normal;
+    font-family: raleway_medium, Arial;
+    border: none;
+    opacity: 1;
+    margin-left: -20px !important;}
+.sendMoneyDiv{margin-left:10px;margin-top: 15px;margin-right:10px;bottom:10px;border:1px solid lightgray;padding-top: 3px;height: 30pc;}
 .notesVerify{font-size: 16.00px;
-    font-weight: 400;    color: rgba(83, 74, 43, 1);
-    font-style: normal;font-family: raleway_regular, Arial;;padding-top: 12px;}
+    font-weight: 400;  
+      color: rgba(83, 74, 43, 1);
+    font-style: normal;
+    font-family: raleway_regular, Arial;
+    padding-top: 12px;}
+.receiver{
+    font-size: 16.00px;
+    font-weight: 400; 
+    color: rgba(60, 60, 60, 1);
+    font-style: normal;
+    font-family: raleway_regular, Arial;
+    opacity:1;
+    padding-top: 3px;
+    display: block;}
 .enterPhone{
     font-size: 24.00px;
     font-weight: 700;
@@ -247,6 +281,7 @@ and (max-device-width : 320px) and (orientation:portrait){
     color: rgba(255, 255, 255, 1);
     opacity: 1;
     padding-top: 12px;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
 }
 .verify{
     font-size: 24.00px;
@@ -256,6 +291,7 @@ and (max-device-width : 320px) and (orientation:portrait){
     color: rgba(41, 39, 36, 1);
     opacity: 1;
     padding-top: 12px;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
 }
 .forgot{
     font-size: 20.00px;
@@ -288,10 +324,15 @@ and (max-device-width : 320px) and (orientation:portrait){
     opacity: 0.800000011920929;
     padding: 3px;
     cursor: pointer;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
 }
 .otherSet_Pro{
     font-size: 20.00px;    font-weight: 700;    font-style: normal;    font-family: raleway_bold, Arial;    color: rgba(41, 39, 36, 1);
-    opacity: 0.800000011920929;    padding: 3px;    cursor: pointer;    margin-top: 35px;background: gainsboro;text-align: center;
+    opacity: 0.800000011920929;    padding: 3px;    cursor: pointer;    margin-top: 35px;background: gainsboro;text-align: center;filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
+}
+.otherSet_Pro_New{
+    font-size: 20.00px;    font-weight: 700;    font-style: normal;    font-family: raleway_bold, Arial;    color: rgba(41, 39, 36, 1);
+    opacity: 0.800000011920929;    padding: 3px;  background: gainsboro;filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
 }
 .otherSet_wel1{
     font-size: 24.00px;
@@ -316,15 +357,25 @@ and (max-device-width : 320px) and (orientation:portrait){
 }
 /* .digit-group > input {width: 30px;height: 30px;line-height: 50px;text-align: center;font-size: 20px; border-radius:8px;font-family: 'Raleway', sans-serif;
     font-weight: 200;margin: 0 5px;border: 1px solid #979797;color: #000009 !important}   */
-
+.filterSend{
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.1607843137254902));
+}
 .point16{    
-    line-height: 28.00px;
+    /* line-height: 28.00px; */
     color: rgba(60, 60, 60, 1);
-    -webkit-text-stroke: unset;
     font-size: 16.00px;
     font-weight: 500;
     font-style: normal;
     font-family: raleway_medium, Arial;
+}
+.usd{    
+    line-height: 34.00px;
+    color: rgba(255, 255, 255, 1);
+    font-size: 16.00px;
+    font-weight: 500;
+    font-style: normal;
+    font-family: raleway_medium, Arial;
+    opacity: 1;
 }
 select{
     background-color: white;
@@ -367,6 +418,24 @@ input[type="text"]
 } 
 .form-control.is-invalid{
     border-bottom: 1px solid red;
+}
+.pt12Bold{
+    font-size: 12.00px;
+    font-weight: 700;
+    font-style: normal;
+    font-family: raleway_bold, Arial;
+    opacity: 1;
+    color: rgba(60, 60, 60, 1);
+    margin-left: 10px;
+}
+.pt12Med{
+    font-size: 12.00px;
+    font-weight: 500;
+    font-style: normal;
+    font-family: raleway_medium, Arial;
+    opacity: 1;
+    color: rgba(60, 60, 60, 1);
+    margin-left: 10px;
 }
 .form-control.is-valid{
     border-bottom: 1px solid #3C3C3C;
